removed last references to MDL cdn fixing unnecessary overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,7 @@
     left: 2rem;
 
     height: 4rem;
+    width: calc(100% - 2rem);
 
     display: flex;
     flex-direction: column;
@@ -25,6 +26,8 @@
 }
 
 .input-container {
+    width: 100%;
+
     margin-top: 2rem;
     margin-left: 2rem;
 }
